--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Alex Li</span>
+                <span class="d-block d-lg-none">Blake Whitman</span>
                 <span class="d-none d-lg-block"><img id='profile-image-circle' class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nice_pic.jpg" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -47,10 +47,10 @@
                         <span class="text-primary">Li</span>
                     </h1>
                     <div class="subheading mb-5">
-                        (216) 624-6222 ·
-                        <a href="mailto:7alex7li@gmail.com">7alex7li@gmail.com</a>
+                        (419) 283-8193 ·
+                        <a href="mailto:whitman.124@osu.edu">whitman.124@osu.edu</a>
                     </div>
-                    <p class="lead mb-5">I am a dual major in Theoretical Mathematics and Computer Science (AI Specialization) at the Ohio State University. I am interested in complexity theory, graph theory, and machine learning.</p>
+                    <p class="lead mb-5">I am a dual major in Theoretical Mathematics and Computer Science (AI Specialization) at the Ohio State University. I am interested in graph theory, optimization problems, and machine learning.</p>
                     <div class="social-icons">
                         <a class="social-icon" data-toggle="tooltip" title="My Linkedin" href="https://www.linkedin.com/in/alex-jinlong-li/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" data-toggle="tooltip" title="My github, with most of the projects I've worked on." href="https://github.com/Alex7Li"><i class="fab fa-github"></i></a>
