--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Alex
-                        <span class="text-primary">Li</span>
+                        Blake
+                        <span class="text-primary">Whitman</span>
                     </h1>
                     <div class="subheading mb-5">
                         (419) 283-8193 ·
