--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-times"></i></span>
-                            Calc I-III, Honors Analysis II, Honors Linear Algebra/Diff Eq, Honors Number Theory, Honors Abstract Algebra I/II, Stats I/II
+                            Calc I-III, DSA, Honors Linear Algebra/Diff Eq, Honors Number Theory, Honors Abstract Algebra I/II, Stats I/II
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-laptop-code"></i></span>
