--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                     <p class="lead mb-5">I am a dual major in Theoretical Mathematics and Computer Science (AI Specialization) at the Ohio State University. I am interested in graph theory, optimization problems, and machine learning.</p>
                     <div class="social-icons">
-                        <a class="social-icon" data-toggle="tooltip" title="My Linkedin" href="https://www.linkedin.com/in/alex-jinlong-li/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" data-toggle="tooltip" title="My Linkedin" href="https://www.linkedin.com/in/blake-whitman-85301b1a4/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" data-toggle="tooltip" title="My github, containing most of my projects." href="https://github.com/blake-whitman"><i class="fab fa-github"></i></a>
                         <a class="social-icon" data-toggle="tooltip" title="My updated resume" href="https://www.overleaf.com/read/gmbgpqmtvdmn"><i class="far fa-file"></i></a>
                     </div>
