--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         (419) 283-8193 ·
                         <a href="mailto:whitman.124@osu.edu">whitman.124@osu.edu</a>
                     </div>
-                    <p class="lead mb-5">I am a dual major in Theoretical Mathematics and Computer Science (AI Specialization) at the Ohio State University. I am interested in graph theory, optimization problems, and machine learning.</p>
+                    <p class="lead mb-5">I am a dual major in Theoretical Mathematics and Computer Science (AI Specialization) at the Ohio State University, with an intended graduation date of May 2023. I am interested in graph theory, optimization problems, and machine learning.</p>
                     <div class="social-icons">
                         <a class="social-icon" data-toggle="tooltip" title="My Linkedin" href="https://www.linkedin.com/in/blake-whitman-85301b1a4/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" data-toggle="tooltip" title="My github, containing most of my projects." href="https://github.com/blake-whitman"><i class="fab fa-github"></i></a>
@@ -66,14 +66,16 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineering Intern</h3>
-                            <div class="subheading mb-3">Google</div>
+                            <div class="subheading mb-3">Fiserv</div>
                             <p>
                                 <a href="https://github.com/google/data-layer-helper"><i class="fab fa-github"></i></a>
-                                Modernize and add features to an open source Javascript library that allows sharing of information among third party libraries. Migrate tests to jasmine/karma, setup build system with yarn using grunt using Closure, add a feature, and review peer PRs on github.
+                                Created and reported specific metrics to senior management. Used Python and SQL to automate reporting of agent hygiene and distribution among approximately 100,000 workstations.
                             </p>
                             <p>
-                                <a href="https://github.com/googleinterns/measurement-library"><i class="fab fa-github"></i></a>
-                                Build an open source JavaScript library for data collection. Sites write simple code to say which events they want, the library sends data about events to libraries of choice (e.g. Google Analytics) and stores data automatically with software of choice (e.g. cookies). Made SPA test site with react, html/css, redux.
+                                Built an interactive dashboard that displays trends of version distribution and agent hygiene. Updated daily with automated script.
+                            </p>
+                            <p>
+                                Work alongside development team and business analysts. Participated in the product design process including requirement, design, and other document reviews.
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Summer 2020</span></div>
