--- a/index.html
+++ b/index.html
@@ -67,16 +67,18 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineering Intern</h3>
                             <div class="subheading mb-3">Fiserv</div>
+                            <ul>
                             <p>
-                                <a href="https://github.com/google/data-layer-helper"><i class="fab fa-github"></i></a>
-                                Created and reported specific metrics to senior management. Used Python and SQL to automate reporting of agent hygiene and distribution among approximately 100,000 workstations.
+                                <!-- <a href="https://github.com/google/data-layer-helper"><i class="fab fa-github"></i></a> -->
+                                <li>Created and reported specific metrics to senior management. Used Python and SQL to automate reporting of agent hygiene and distribution among approximately 100,000 workstations.</li>
                             </p>
                             <p>
-                                Built an interactive dashboard that displays trends of version distribution and agent hygiene. Updated daily with automated script.
+                                <li>Built an interactive dashboard that displays trends of version distribution and agent hygiene. Updated daily with automated script.</li>
                             </p>
                             <p>
-                                Work alongside development team and business analysts. Participated in the product design process including requirement, design, and other document reviews.
+                                <li>Work alongside development team and business analysts. Participated in the product design process including requirement, design, and other document reviews.</li>
                             </p>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Summer 2020</span></div>
                     </div>
