--- a/index.html
+++ b/index.html
@@ -126,17 +126,17 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Ohio State University</h3>
-                            <div class="subheading mb-3">BS Computer Science - AI Track, Honors Mathematics</div>
-                            <p>GPA: 3.948</p>
+                            <div class="subheading mb-3">BS Computer Science - AI Track, BS Mathematics</div>
+                            <p>GPA: 3.89</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Autumn 2017 - Spring 2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Autumn 2019 - Spring 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Mentor High School</h3>
-                            <p>GPA: ~3.5</p>
+                            <h3 class="mb-0">Perrysburg High School</h3>
+                            <p>GPA: ~4.1</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Autumn 2013 - Spring 2017</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Autumn 2015 - Spring 2019</span></div>
                     </div>
                 </div>
             </section>
