--- a/index.html
+++ b/index.html
@@ -159,17 +159,23 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-times"></i></span>
-                            Calc I-III, DSA, Honors Linear Algebra/Diff Eq, Honors Number Theory, Honors Abstract Algebra I/II, Stats I/II
+                            Calc I-III, Linear Algebra/Diff Eq, Abstract Algebra I/II, Stats I/II, Interest Theory
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-laptop-code"></i></span>
-                            Algorithms, Software Design, Systems, Databases, Networking
+                            Data Structures, Algorithms, Software Design, Systems, Networking
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-robot"></i></span>
-                            Intro to AI, AI 2
+                            Intro to AI
                         </li>
                         <li>
+                            <span class="fa-li"><i class="fas fa-file-alt"></i></span>
+                            <a href="https://www.overleaf.com/read/tbskgwcfmgph">
+                                SWE Ethics
+                            </a>
+                        </li>
+                        <!-- <li>
                             <span class="fa-li"><i class="fas fa-file-alt"></i></span>
                             <a href="https://www.overleaf.com/read/zmyzrsbmknmg">
                                 Machine Learning
@@ -186,7 +192,7 @@
                             <a href="https://github.com/samuelstevens/watsong">
                                 Capstone
                             </a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </section>
