--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#extracurriculars">Extracurriculars</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#friends">Friends</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#reading">Reading</a></li>
                 </ul>
             </div>
         </nav>
@@ -236,7 +236,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="resume-section" id="friends">
+            <section class="resume-section" id="reading">
                 <div class="resume-section-content">
                     <h2 class="mb-5">I have some friends that are real</h2>
                     <ul>
