--- a/index.html
+++ b/index.html
@@ -238,14 +238,14 @@
             </section>
             <section class="resume-section" id="reading">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">I have some friends that are real</h2>
+                    <!--<h2 class="mb-5">I have some friends that are real</h2>
                     <ul>
                         <li><a href="https://vilas.us">Vilas Winstein</a></li>
                         <li><a href="http://rushil.online">Rushil Raghavan</a></li>
                         <li><a href="https://jakehuryn.github.io">Jake Huryn</a></li>
                         <li><a href="https://bookwiththearrowsreversed.wordpress.com">John White</a></li>
                         <li><a href="https://www.athiyadeviyani.com">Athiya Deviyani</a></li>
-                    </ul>
+                    </ul> -->
                 </div>
             </section>
             <hr class="m-0" />
