--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         (419) 283-8193 ·
                         <a href="mailto:whitman.124@osu.edu">whitman.124@osu.edu</a>
                     </div>
-                    <p class="lead mb-5">I am a dual major in Theoretical Mathematics and Computer Science (AI Specialization) at the Ohio State University, with an intended graduation date of May 2023. I am interested in graph theory, optimization problems, and machine learning.</p>
+                    <p class="lead mb-5">I am a dual major in Theoretical Mathematics and Computer Science (AI Specialization) at the Ohio State University, with an intended graduation date of May 2023. I am interested in graph theory, convex optimization, and machine learning.</p>
                     <div class="social-icons">
                         <a class="social-icon" data-toggle="tooltip" title="My Linkedin" href="https://www.linkedin.com/in/blake-whitman-85301b1a4/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" data-toggle="tooltip" title="My github, containing most of my projects." href="https://github.com/blake-whitman"><i class="fab fa-github"></i></a>
@@ -84,22 +84,22 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Research in Machine Learning</h3>
-                            <div class="subheading mb-3">Under Mikhail Belkin</div>
+                            <h3 class="mb-0">Research in Optimization</h3>
+                            <div class="subheading mb-3">Under Baha Alzalg</div>
                             <p>
-                                <a href="https://github.com/EigenPro"><i class="fab fa-github"></i></a>
-                                Implement a kernel-based machine learning algorithm "Eigenpro" that improves the convergence speed of SGD by reducing spectral decay using python/numpy. Publish algorithm in the sklearn-extra machine learning library. Create documentation website.
+                                <a href="https://www.overleaf.com/read/tymxdvyrvhvx"><i class="fab fa-github"></i></a>
+                                Introduced linear optimization problems over polar convex regions by incorporating the graphical method for linear programming.
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Summer 2018 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Winter 2021 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Research in Topology</h3>
-                            <div class="subheading mb-3">Under Facundo Memoli</div>
-                            <p>Prove results relating to the Gromov-Hausdorff metric for distances between metric spaces, particularly the unit circle/sphere with geodesic distance. Computationally generate lower bounds on these distances using integer linear programming as well as a combination of a pruning algorithm and parallel processing with AWS.</p>
+                            <h3 class="mb-0">Research in Queuing Theory</h3>
+                            <div class="subheading mb-3">Under Dave Anderson</div>
+                            <p>Applied Queuing Theory principles to model interactions observed in the local COTA bus system in Columbus, Ohio. Performed empirical analysis on the wait time distribution of passengers.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Summer 2019</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Summer 2020 - Winter 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
