--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research in Queuing Theory</h3>
                             <div class="subheading mb-3">Under Dave Anderson</div>
-                            <p>Applied Queuing Theory principles to model interactions observed in the local COTA bus system in Columbus, Ohio. Performed empirical analysis on the wait time distribution of passengers.</p>
+                            <p>
+                                <a href="https://www.overleaf.com/read/hdhvxpdvpfsy"><i class="fab fa-github"></i></a>
+                                Applied Queuing Theory principles to model interactions observed in the local COTA bus system in Columbus, Ohio. Performed empirical analysis on the wait time distribution of passengers.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Summer 2020 - Winter 2021</span></div>
                     </div>
