--- a/index.html
+++ b/index.html
@@ -80,43 +80,44 @@
                             </p>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Summer 2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2021 - August 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research in Optimization</h3>
                             <div class="subheading mb-3">Under Baha Alzalg</div>
                             <p>
-                                <a href="https://www.overleaf.com/read/tymxdvyrvhvx"><i class="fab fa-github"></i></a>
+                                <a href="https://www.overleaf.com/read/tymxdvyrvhvx"><i class="fas fa-file-alt"></i></a>
                                 Introduced linear optimization problems over polar convex regions by incorporating the graphical method for linear programming.
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Winter 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research in Queuing Theory</h3>
                             <div class="subheading mb-3">Under Dave Anderson</div>
                             <p>
-                                <a href="https://www.overleaf.com/read/hdhvxpdvpfsy"><i class="fab fa-github"></i></a>
+                                <a href="https://www.overleaf.com/read/hdhvxpdvpfsy"><i class="fas fa-file-alt"></i></a>
                                 Applied Queuing Theory principles to model interactions observed in the local COTA bus system in Columbus, Ohio. Performed empirical analysis on the wait time distribution of passengers.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Summer 2020 - Winter 2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2020 - January 2021</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <!-- <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Data Quality Intern</h3>
                             <div class="subheading mb-3">FCX Performance</div>
                             <p>Clean address data with Excel, design algorithm to reduce the amount of manual work. Give recommendations for improving data quality short-term and long-term by considering patterns in the data. Utilize WTTE-RNN model to predict churn of customers given their buying history.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Summer 2019</span></div>
-                    </div>
+                    </div> -->
                     <div class="d-flex flex-colum flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Software 1 Intro to Java TA/Grader</h3>
+                            <h3 class="mb-0">Software 1 Intro to Java TA</h3>
                             <div class="subheading">Ohio State University</div>
-                            <p>Work 7 hr/week for a semester assisting in lab, holding office hours. Grade projects and HW.</p>
+                            <p>Work 8 hr/week for a semester assisting in lab and holding office hours. Grade projects and HW.</p>
                         </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2020 - December 2020</span></div>
                     </div>
                 </div>
             </section>
