--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                             <div class="subheading mb-3">Under Dave Anderson</div>
                             <p>
                                 <a href="https://www.overleaf.com/read/hdhvxpdvpfsy"><i class="fas fa-file-alt"></i></a>
+                                <a href="https://github.com/blake-whitman/COTA-Simulation"><i class="fab fa-github"></i></a>
                                 Applied Queuing Theory principles to model interactions observed in the local COTA bus system in Columbus, Ohio. Performed empirical analysis on the wait time distribution of passengers.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2020 - January 2021</span></div>
