--- a/index.html
+++ b/index.html
@@ -111,22 +111,6 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2020 - January 2021</span></div>
                     </div>
-                    <!-- <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Data Quality Intern</h3>
-                            <div class="subheading mb-3">FCX Performance</div>
-                            <p>Clean address data with Excel, design algorithm to reduce the amount of manual work. Give recommendations for improving data quality short-term and long-term by considering patterns in the data. Utilize WTTE-RNN model to predict churn of customers given their buying history.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Summer 2019</span></div>
-                    </div> -->
-                    <div class="d-flex flex-colum flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Software 1 Intro to Java TA</h3>
-                            <div class="subheading">Ohio State University</div>
-                            <p>Work 8 hr/week for a semester assisting in lab and holding office hours. Grade projects and HW.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2020 - December 2020</span></div>
-                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -158,6 +142,7 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="fab fa-java"></i></li>
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js"></i></li>
                         <li class="list-inline-item"><i class="fab fa-react"></i></li>
