--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         (419) 283-8193 ·
                         <a href="mailto:whitman.124@osu.edu">whitman.124@osu.edu</a>
                     </div>
-                    <p class="lead mb-5">I am a dual major in Theoretical Mathematics and Computer Science (AI Specialization) at the Ohio State University, with an intended graduation date of May 2023. I am interested in graph theory, optimization, and machine learning.</p>
+                    <p class="lead mb-5"><i class="fas fa-hand-spock"></i>I am a dual major in Theoretical Mathematics and Computer Science (AI Specialization) at the Ohio State University, with an intended graduation date of May 2023. I am interested in graph theory, optimization, and machine learning.</p>
                     <div class="social-icons">
                         <a class="social-icon" data-toggle="tooltip" title="My Linkedin" href="https://www.linkedin.com/in/blake-whitman-85301b1a4/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" data-toggle="tooltip" title="My github, containing most of my projects." href="https://github.com/blake-whitman"><i class="fab fa-github"></i></a>
