--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         (419) 283-8193 ·
                         <a href="mailto:whitman.124@osu.edu">whitman.124@osu.edu</a>
                     </div>
-                    <p class="lead mb-5"><i class="fas fa-hand-spock"></i>I am a dual major in Theoretical Mathematics and Computer Science (AI Specialization) at the Ohio State University, with an intended graduation date of May 2023. I am interested in graph theory, optimization, and machine learning.</p>
+                    <p class="lead mb-5"><i class="far fa-hand-spock"></i> I am a dual major in Theoretical Mathematics and Computer Science (AI Specialization) at the Ohio State University, with an intended graduation date of May 2023. I am interested in graph theory, optimization, and machine learning.</p>
                     <div class="social-icons">
                         <a class="social-icon" data-toggle="tooltip" title="My Linkedin" href="https://www.linkedin.com/in/blake-whitman-85301b1a4/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" data-toggle="tooltip" title="My github, containing most of my projects." href="https://github.com/blake-whitman"><i class="fab fa-github"></i></a>
@@ -120,7 +120,7 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Ohio State University</h3>
+                            <h3 class="mb-0"><i class="fas fa-university"></i> Ohio State University</h3>
                             <div class="subheading mb-3">BS Computer Science - AI Track, BS Mathematics</div>
                             <p>GPA: 3.89</p>
                         </div>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Perrysburg High School</h3>
+                            <h3 class="mb-0"><i class="fas fa-graduation-cap"></i> Perrysburg High School</h3>
                             <p>GPA: ~4.1</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Autumn 2015 - Spring 2019</span></div>
