--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Blake Whitman</span>
-                <span class="d-none d-lg-block"><img id='profile-image-circle' class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nice_pic.jpg" alt="" /></span>
+                <span class="d-none d-lg-block"><img id='profile-image-circle' class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/1E269010-7009-430A-949C-49AB2253BA9B.jpeg" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
