--- a/index.html
+++ b/index.html
@@ -234,14 +234,47 @@
             </section>
             <section class="resume-section" id="reading">
                 <div class="resume-section-content">
-                    <!--<h2 class="mb-5">I have some friends that are real</h2>
-                    <ul>
-                        <li><a href="https://vilas.us">Vilas Winstein</a></li>
-                        <li><a href="http://rushil.online">Rushil Raghavan</a></li>
-                        <li><a href="https://jakehuryn.github.io">Jake Huryn</a></li>
-                        <li><a href="https://bookwiththearrowsreversed.wordpress.com">John White</a></li>
-                        <li><a href="https://www.athiyadeviyani.com">Athiya Deviyani</a></li>
-                    </ul> -->
+                    <h2 class="mb-5">Books in my Library</h2>
+                    <div class="subheading mb-3">Interview Preparation</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-book"></i></span>
+                            Cracking the Coding Interview (Gayle Laakmann McDowell)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-laptop-code"></i></span>
+                            Introduction to Algorithms (CLRS)
+                        </li>
+                    </ul>
+                    
+                    <div class="subheading mb-3">Sports Analytics</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-basketball-ball"></i></span>
+                            Basketball Analytics (Stephen M. Shea & Christopher E. Baker)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-basketball-ball"></i></span>
+                            Basketabll Analytics: Spatial Tracking (Stephen M. Shea)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-baseball-ball"></i></span>
+                            Moneyball (Michael Lewis)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-baseball-ball"></i></span>
+                            Astroball (Ben Reiter)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-baseball-ball"></i></span>
+                            Hot Stove Economics: Understanding Baseball's Second Season (J.C. Bradbury)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-book-open"></i></span>
+                            Scorecasting: The Hidden Influences Behind how Sports are Played and Games are Won (Tobias J. Moskowitz & L. Jon Wertheim)
+                        </li>
+                    </ul>
+                    
                 </div>
             </section>
             <hr class="m-0" />
