--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
                             Introduction to Algorithms (CLRS)
                         </li>
                     </ul>
+                    </div>
                     
                     <div class="subheading mb-3">Sports Analytics</div>
                     <ul class="fa-ul mb-0">
@@ -274,6 +275,7 @@
                             Scorecasting: The Hidden Influences Behind how Sports are Played and Games are Won (Tobias J. Moskowitz & L. Jon Wertheim)
                         </li>
                     </ul>
+                    </div>
                     
                 </div>
             </section>
