--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-basketball-ball"></i></span>
-                            Basketabll Analytics: Spatial Tracking (Stephen M. Shea)
+                            Basketabll Analytics: Spatial tracking (Stephen M. Shea)
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-baseball-ball"></i></span>
@@ -267,11 +267,67 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-baseball-ball"></i></span>
-                            Hot Stove Economics: Understanding Baseball's Second Season (J.C. Bradbury)
+                            Hot Stove Economics: Understanding baseball's second season (J.C. Bradbury)
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-book-open"></i></span>
-                            Scorecasting: The Hidden Influences Behind how Sports are Played and Games are Won (Tobias J. Moskowitz & L. Jon Wertheim)
+                            Scorecasting: The hidden influences behind how sports are played and games are won (Tobias J. Moskowitz & L. Jon Wertheim)
+                        </li>
+                    </ul>
+                    <br>
+                    <div class="subheading mb-3">Quantitative Finance</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-briefcase"></i></span>
+                            Quantitative Trading: How to build your own algorithmic trading business (Ernest P. Chan)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-money-check-alt"></i></span>
+                            A Man for All Markets (Edward O. Thorp)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="far fa-money-bill-alt"></i></span>
+                            The Richest Man in Babylon (George S. Clason)
+                        </li>
+                    </ul>
+                    <br>
+                    <div class="subheading mb-3">Mathematics</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-shapes"></i></span>
+                            Flatland (Edwin A. Abbott)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-square-root-alt"></i></span>
+                            Imagining Numbers (Barry Mazur)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-chart-line"></i></span>
+                            Linear Algebra Done Right (Sheldon Axler)
+                        </li>
+                    </ul>
+                    <br>
+                    <div class="subheading mb-3">Data Science</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-chart-bar"></i></span>
+                            Storytelling with Data (Cole Nussbaumer Knaflic)
+                        </li>
+                    </ul>
+                    <br>
+                    <div class="subheading mb-3">Behavioral Economics and Psychology</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="far fa-bookmark"></i></span>
+                            Outliers (Malcolm Gladwell)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-bookmark"></i></span>
+                            Nudge (Richard H. Thaler & Cass R. Sunstein)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-book"></i></span>
+                            The Structure of Scientific Revolutions (Thomas S. Kuhn)
                         </li>
                     </ul>
                 </div>
