--- a/index.html
+++ b/index.html
@@ -270,6 +270,10 @@
                             Hot Stove Economics: Understanding baseball's second season (J.C. Bradbury)
                         </li>
                         <li>
+                            <span class="fa-li"><i class="fas fa-baseball-ball"></i></span>
+                            The New Bill James Historical Baseball Abstract (Bill James)
+                        </li>
+                        <li>
                             <span class="fa-li"><i class="fas fa-book-open"></i></span>
                             Scorecasting: The hidden influences behind how sports are played and games are won (Tobias J. Moskowitz & L. Jon Wertheim)
                         </li>
