--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#extracurriculars">Extracurriculars</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#reading">Reading</a></li>
                 </ul>
             </div>
@@ -194,18 +194,41 @@
             </section>
             <hr class="m-0" />
             <!-- Awards-->
-            <section class="resume-section" id="extracurriculars">
+            <section class="resume-section" id="projects">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Extracurriculars</h2>
+                    <h2 class="mb-5">Projects</h2> 
                     <ul class="fa-ul mb-0">
                         <li>
                             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                                <div class="flex-grow-1">
-                                    <h3 class="mb-0"><a href="https://cpcosu.github.io/">Competitive Programming Club - President</a></h3>
-                                    <p>Plan and lead weekly meetings. Give and listen to student driven weekly lectures showcasing problems which require deep knowledge of data structures and great mathematical creativity. Create major changes in meeting structure and club mission. Host and plan school ICPC competition.</p>
-                                </div>
-                                <div class="flex-shrink-0"><span class="text-primary">Autumn 2018 - Spring 2021</span></div>
-                            </div>
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Software Engineering Intern</h3>
+                            <div class="subheading mb-3">Fiserv</div>
+                            <ul>
+                            <p>
+                                <!-- <a href="https://github.com/google/data-layer-helper"><i class="fab fa-github"></i></a> -->
+                                <li>Created and reported specific metrics to senior management. Used Python and SQL to automate reporting of agent hygiene and distribution among approximately 100,000 workstations.</li>
+                            </p>
+                            <p>
+                                <li>Built an interactive dashboard that displays trends of version distribution and agent hygiene. Updated daily with automated script.</li>
+                            </p>
+                            <p>
+                                <li>Work alongside development team and business analysts. Participated in the product design process including requirement, design, and other document reviews.</li>
+                            </p>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2021 - August 2021</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Research in Optimization</h3>
+                            <div class="subheading mb-3">Under Baha Alzalg</div>
+                            <p>
+                                <a href="https://www.overleaf.com/read/tymxdvyrvhvx"><i class="fas fa-file-alt"></i></a>
+                                Introduced linear optimization problems over polar convex regions by incorporating the graphical method for linear programming.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
+                    </div>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
