--- a/index.html
+++ b/index.html
@@ -196,13 +196,11 @@
             <!-- Awards-->
             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Projects</h2> 
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <h2 class="mb-5">Projects</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Software Engineering Intern</h3>
-                            <div class="subheading mb-3">Fiserv</div>
+                            <h3 class="mb-0">Veeva Systems Interactive Dashboard</h3>
+                            <div class="subheading mb-3">React.js, Next.js, Tailwind.css, Python, Flask, Numpy, SQLite</div>
                             <ul>
                             <p>
                                 <!-- <a href="https://github.com/google/data-layer-helper"><i class="fab fa-github"></i></a> -->
@@ -216,18 +214,18 @@
                             </p>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2021 - August 2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Research in Optimization</h3>
-                            <div class="subheading mb-3">Under Baha Alzalg</div>
+                            <h3 class="mb-0">Personal Website</h3>
+                            <div class="subheading mb-3">Javascript, CSS, Bootstrap</div>
                             <p>
                                 <a href="https://www.overleaf.com/read/tymxdvyrvhvx"><i class="fas fa-file-alt"></i></a>
                                 Introduced linear optimization problems over polar convex regions by incorporating the graphical method for linear programming.
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - Present</span></div>
                     </div>
                         </li>
                         <li>
