--- a/index.html
+++ b/index.html
@@ -203,14 +203,13 @@
                             <div class="subheading mb-3">React.js, Next.js, Tailwind.css, Python, Flask, Numpy, SQLite</div>
                             <ul>
                             <p>
-                                <!-- <a href="https://github.com/google/data-layer-helper"><i class="fab fa-github"></i></a> -->
-                                <li>Created and reported specific metrics to senior management. Used Python and SQL to automate reporting of agent hygiene and distribution among approximately 100,000 workstations.</li>
+                                <li>Full-stack data analysis web application, equipped with frontend (react, next, tailwind), database (SQLite), and backend (python, flask, numpy) capabilities.</li>
                             </p>
                             <p>
-                                <li>Built an interactive dashboard that displays trends of version distribution and agent hygiene. Updated daily with automated script.</li>
+                                <li>Content includes interactive graphs with total prescriptions of each medicine per month, top doctors for new prescriptions each month, and dynamic profile pages for each doctor with their own prescription trends as well as predicted values for each.</li>
                             </p>
                             <p>
-                                <li>Work alongside development team and business analysts. Participated in the product design process including requirement, design, and other document reviews.</li>
+                                <li>First place in the Veeva Systems challenge at HACK OHI/O.</li>
                             </p>
                             </ul>
                         </div>
@@ -221,8 +220,8 @@
                             <h3 class="mb-0">Personal Website</h3>
                             <div class="subheading mb-3">Javascript, CSS, Bootstrap</div>
                             <p>
-                                <a href="https://www.overleaf.com/read/tymxdvyrvhvx"><i class="fas fa-file-alt"></i></a>
-                                Introduced linear optimization problems over polar convex regions by incorporating the graphical method for linear programming.
+                                <a href="https://blake-whitman.github.io"><i class="fas fa-mouse"></i></a>
+                                This website–built with JS, CSS, and Bootstrap libraries. Thank you for visiting :)
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2021 - Present</span></div>
