--- a/index.html
+++ b/index.html
@@ -353,6 +353,10 @@
                             <span class="fa-li"><i class="fas fa-book"></i></span>
                             The Structure of Scientific Revolutions (Thomas S. Kuhn)
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-book-reader"></i></span>
+                            Freakonomics: A rogue economist explores the hidden side of everything (Steven D. Levitt & Stephen J. Dubner)
+                        </li>
                     </ul>
                 </div>
             </section>
