--- a/index.html
+++ b/index.html
@@ -221,13 +221,13 @@
                             <div class="subheading mb-3">Javascript, CSS, Bootstrap</div>
                             <p>
                                 <a href="https://blake-whitman.github.io"><i class="fas fa-mouse"></i></a>
-                                This website–built with JS, CSS, and Bootstrap libraries. Thank you for visiting :)
+                                This website! It was built with JS, CSS, and Bootstrap libraries. Thank you for visiting :)
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2021 - Present</span></div>
                     </div>
                         </li>
-                        <li>
+                        <!-- <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             ICPC NAQ @ Ohio State (2017 - 2nd, 2018 - 1st, 2019 - 1st)
                         </li>
@@ -248,7 +248,7 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Epee fencing top 60 nationwide - youth division (2017)
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </section>
