--- a/index.html
+++ b/index.html
@@ -357,6 +357,10 @@
                             <span class="fa-li"><i class="fas fa-book-reader"></i></span>
                             Freakonomics: A rogue economist explores the hidden side of everything (Steven D. Levitt & Stephen J. Dubner)
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-book-reader"></i></span>
+                            SuperFreakonomics: Global cooling, patriotic prostitutes and why suicide bombers should buy life insurance (Steven D. Levitt & Stephen J. Dubner)
+                        </li>
                     </ul>
                 </div>
             </section>
