--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
                         <li class="list-inline-item"><i class="fab fa-cuttlefish"></i></li>
                         <li class="list-inline-item"><i class="fab fa-git"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-css3"></i></li>
                     </ul>
                     <div class="subheading mb-3">Coursework</div>
                     <ul class="fa-ul mb-0">
