--- a/index.html
+++ b/index.html
@@ -209,9 +209,10 @@
                             <p>
                                 <li>Content includes interactive graphs with total prescriptions of each medicine per month, top doctors for new prescriptions each month, and dynamic profile pages for each doctor with their own prescription trends as well as predicted values for each.</li>
                             </p>
-                            <p>
-                                <li>First place in the Veeva Systems challenge at HACK OHI/O.</li>
-                            </p>
+                            <p><li>
+                                <span class="fa-li"><i class="fas fa-briefcase"></i></span>
+                                First place in the Veeva Systems challenge at HACK OHI/O.
+                            </li></p>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2021</span></div>
