--- a/index.html
+++ b/index.html
@@ -209,10 +209,8 @@
                             <p>
                                 <li>Content includes interactive graphs with total prescriptions of each medicine per month, top doctors for new prescriptions each month, and dynamic profile pages for each doctor with their own prescription trends as well as predicted values for each.</li>
                             </p>
-                            <li>
                                 <span class="fa-li"><i class="fas fa-award"></i></span>
                                 First place in the Veeva Systems challenge at HACK OHI/O.
-                            </li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2021</span></div>
@@ -222,8 +220,8 @@
                             <h3 class="mb-0">Personal Website</h3>
                             <div class="subheading mb-3">Javascript, CSS, Bootstrap</div>
                             <p>
-                                <a href="https://blake-whitman.github.io"><i class="fas fa-mouse"></i></a>
-                                This website! It was built with JS, CSS, and Bootstrap libraries. Thank you for visiting :)
+                                <a href="https://github.com/blake-whitman/blake-whitman.github.io"><i class="fas fa-mouse"></i></a>
+                                This website! It was built using JS, CSS, and Bootstrap libraries. Click the mouse to the left to view more of the source code. Thank you for visiting :)
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2021 - Present</span></div>
