--- a/index.html
+++ b/index.html
@@ -207,10 +207,12 @@
                                     <span class="fa-li"><i class="fas fa-sitemap"></i></span>
                                     Full-stack data analysis web application, equipped with frontend (react, next, tailwind), database (SQLite), and backend (python, flask, numpy) capabilities.
                                     </li>
+                                    <br>
                                     <li>
                                     <span class="fa-li"><i class="fas fa-chart-pie"></i></span>
                                     Content includes interactive graphs with total prescriptions of each medicine per month, top doctors for new prescriptions each month, and dynamic profile pages for each doctor with their own prescription trends as well as predicted values for each.
                                     </li>
+                                    <br>
                                     <li>
                                     <span class="fa-li"><i class="fas fa-award"></i></span>
                                     Fortunate to be named the grand prize winners of the Veeva Systems challenge at HACK OHI/O 2021.
@@ -225,10 +227,12 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Personal Website</h3>
                             <div class="subheading mb-3">Javascript, CSS, Bootstrap</div>
-                            <p>
-                                <a href="https://github.com/blake-whitman/blake-whitman.github.io"><i class="fas fa-mouse"></i></a>
-                                This website! It was built using JS, CSS, and Bootstrap libraries. Click the mouse to the left to view more of the source code. Thank you for visiting :)
-                            </p>
+                                <ul class="fa-ul mb-0">
+                                    <li>
+                                    <a href="https://github.com/blake-whitman/blake-whitman.github.io"><i class="fas fa-mouse"></i></a>
+                                    This website! It was built using JS, CSS, and Bootstrap libraries. Click the mouse to the left to view more of the source code. Thank you for visiting :)
+                                    </li>
+                                </ul>                                          
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2021 - Present</span></div>
                     </div>
