--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
                             <div class="subheading mb-3">React.js, Next.js, Tailwind.css, Python, Flask, Numpy, SQLite</div>
                                 <ul class="fa-ul mb-0">
                                     <li>
-                                    <span class="fa-li"><i class="fas fa-sitemap"></i></span>
-                                    Full-stack data analysis web application, equipped with frontend (react, next, tailwind), database (SQLite), and backend (python, flask, numpy) capabilities.
+                                    <a href="https://github.com/blake-whitman/COTA-Simulation"><i class="fab fa-github"></i></a>
+                                    Full-stack data analysis web application, equipped with frontend (react, next, tailwind), database (SQLite), and backend (python, flask, numpy) capabilities. 
                                     </li>
                                     <br>
                                     <li>
@@ -230,7 +230,7 @@
                                 <ul class="fa-ul mb-0">
                                     <li>
                                     <a href="https://github.com/blake-whitman/blake-whitman.github.io"><i class="fas fa-mouse"></i></a>
-                                    This website! It was built using JS, CSS, and Bootstrap libraries. Click the mouse to the left to view more of the source code. Thank you for visiting :)
+                                    This website! It was built using a combination of JS, CSS, and Bootstrap libraries. You can click the mouse to the left to view the source code. Thank you for visiting :)
                                     </li>
                                 </ul>                                          
                         </div>
