--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             <div class="subheading mb-3">React.js, Next.js, Tailwind.css, Python, Flask, Numpy, SQLite</div>
                                 <ul class="fa-ul mb-0">
                                     <li>
-                                    <span class="fa-li"<a href="https://github.com/blake-whitman/COTA-Simulation"><i class="fab fa-github"></i></a></span>
+                                    <span class="fa-li"><a href="https://github.com/blake-whitman/COTA-Simulation"><i class="fab fa-github"></i></a></span>
                                     Full-stack data analysis web application, equipped with frontend (react, next, tailwind), database (SQLite), and backend (python, flask, numpy) capabilities. 
                                     </li>
                                     <br>
