--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                             <div class="subheading mb-3">Javascript, CSS, Bootstrap</div>
                                 <ul class="fa-ul mb-0">
                                     <li>
-                                    <a href="https://github.com/blake-whitman/blake-whitman.github.io"><i class="fas fa-mouse"></i></a>
+                                    <span class="fa-li"><a href="https://github.com/blake-whitman/blake-whitman.github.io"><i class="fas fa-mouse"></i></a></span>
                                     This website! It was built using a combination of JS, CSS, and Bootstrap libraries. You can click the mouse to the left to view the source code. Thank you for visiting :)
                                     </li>
                                 </ul>                                          
