--- a/index.html
+++ b/index.html
@@ -111,9 +111,13 @@
                                 <ul class="fa-ul mb-0">
                                     <li>
                                     <span class="fa-li"><a href="https://www.overleaf.com/read/hdhvxpdvpfsy"><i class="fas fa-file-alt"></i></a></span>
-                                    <span class="fa-li"><a href="https://github.com/blake-whitman/COTA-Simulation"><i class="fab fa-github"></i></a></span>
                                     Applied Queuing Theory principles to model interactions observed in the local COTA bus system in Columbus, Ohio. Performed empirical analysis on the wait time distribution of passengers.</p>
-                                    </li>                
+                                    </li>
+                                    <br>
+                                    <li>
+                                    <span class="fa-li"><a href="https://github.com/blake-whitman/COTA-Simulation"><i class="fab fa-github"></i></a></span>
+                                    Implemented a simulation in Java that models the theoretical mathematical interactions. The code inputs a variety of parameters that be altered to assess certain variable dependencies.
+                                    </li>
                                 </ul>                                                                        
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2020 - January 2021</span></div>
